--- a/amazon.html
+++ b/amazon.html
@@ -45,7 +45,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity js-cart-quantity">0</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -59,6 +59,7 @@
   </body>
 
   <!-- <script> loads the data line by line, hence declare the resources accordingly-->
+  <script src="data/cart.js"></script>
   <script src="data/products.js"></script>
   <script src="script/amaon.js"></script>
    
