--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -16,9 +16,14 @@
   <!-- spec = test -->
   <script type='module' src="data/cartTest.js"></script>
   <script type='module' src="utils/moneyTest.js"></script>
-  
+  <script type='module' src="checkout/orderSummaryTest.js"></script>
+
 </head>
 
 <body>
+  <div class="js-test-container"></div>
+  <div class="header-content"></div>
+  <div class="js-order-summary"></div>
+  <div class="js-payment-summary"></div>
 </body>
 </html>
